--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,9 +11,8 @@
 }
 
 .navbar-container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 1.5rem;
+    width: 100%;
+    padding: 0 3%;
     display: flex;
     justify-content: space-between;
     align-items: center;
