--- a/src/pages/Apply.css
+++ b/src/pages/Apply.css
@@ -2,9 +2,8 @@
 
 .apply-container {
     padding: 2rem 0;
-    max-width: 1100px;
-    margin: 0 auto;
     width: 100%;
+    margin: 0;
 }
 
 .apply-stepper {
