--- a/src/pages/Apply.css
+++ b/src/pages/Apply.css
@@ -3,7 +3,8 @@
 .apply-container {
     padding: 2rem 0;
     width: 100%;
-    margin: 0;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .apply-stepper {
